Fixed another global overflow bug
This only happening when snapping to a large item while dragging directly from library. But it shifted everything around. I hope this is safe. @swissspidy?

--- a/assets/src/edit-story/style.css
+++ b/assets/src/edit-story/style.css
@@ -39,6 +39,7 @@ body.js.edit-story #web-stories-editor {
   background-color: #1b1d1c; /* theme.colors.bg.workspace */
   position: relative;
   height: calc(100vh - 32px); /* ADMIN_TOOLBAR_HEIGHT = 32 */
+  overflow: hidden;
 }
 
 body.js.edit-story #web-stories-editor .loading-message {
